src/test/ui/consts/const-loop.stderr
error[E0744]: `loop` is not allowed in a `const`
  --> $DIR/const-loop.rs:1:15
   |
LL | const _: () = loop {};
   |               ^^^^^^^

error[E0744]: `loop` is not allowed in a `static`
  --> $DIR/const-loop.rs:3:19
   |
LL | static FOO: i32 = loop { break 4; };
   |                   ^^^^^^^^^^^^^^^^^

error[E0744]: `loop` is not allowed in a `const fn`
  --> $DIR/const-loop.rs:6:5
   |
LL |     loop {}
   |     ^^^^^^^

error[E0744]: `loop` is not allowed in a `const fn`
  --> $DIR/const-loop.rs:19:9
   |
LL |         loop {}
   |         ^^^^^^^

error[E0744]: `while` is not allowed in a `const`
  --> $DIR/const-loop.rs:31:9
   |
LL |         while false {}
   |         ^^^^^^^^^^^^^^

error[E0744]: `while` is not allowed in a `const`
  --> $DIR/const-loop.rs:42:5
   |
LL | /     while x < 4 {
LL | |         x += 1;
LL | |     }
   | |_____^

error[E0744]: `while` is not allowed in a `const`
  --> $DIR/const-loop.rs:46:5
   |
LL | /     while x < 8 {
LL | |         x += 1;
LL | |     }
   | |_____^

error[E0744]: `for` is not allowed in a `const`
  --> $DIR/const-loop.rs:56:5
   |
LL | /     for i in 0..4 {
LL | |         x += i;
LL | |     }
   | |_____^

error[E0744]: `for` is not allowed in a `const`
  --> $DIR/const-loop.rs:60:5
   |
LL | /     for i in 0..4 {
LL | |         x += i;
LL | |     }
   | |_____^

error[E0744]: `loop` is not allowed in a `const`
  --> $DIR/const-loop.rs:70:5
   |
LL | /     loop {
LL | |         x += 1;
LL | |         if x == 4 {
LL | |             break;
LL | |         }
LL | |     }
   | |_____^

error[E0744]: `if` is not allowed in a `const`
  --> $DIR/const-loop.rs:72:9
   |
LL | /         if x == 4 {
LL | |             break;
LL | |         }
   | |_________^

error[E0744]: `loop` is not allowed in a `const`
  --> $DIR/const-loop.rs:77:5
   |
LL | /     loop {
LL | |         x += 1;
LL | |         if x == 8 {
LL | |             break;
LL | |         }
LL | |     }
   | |_____^

error[E0744]: `if` is not allowed in a `const`
  --> $DIR/const-loop.rs:79:9
   |
LL | /         if x == 8 {
LL | |             break;
LL | |         }
   | |_________^

error[E0744]: `while let` is not allowed in a `const`
  --> $DIR/const-loop.rs:89:5
   |
LL |     while let None = Some(x) { }
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0744]: `while let` is not allowed in a `const`
  --> $DIR/const-loop.rs:90:5
   |
LL |     while let None = Some(x) { }
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0744]: `loop` is not allowed in a `const`
  --> $DIR/const-loop.rs:10:22
   |
LL |     const BAR: i32 = loop { break 4; };
   |                      ^^^^^^^^^^^^^^^^^

error[E0744]: `loop` is not allowed in a `const`
  --> $DIR/const-loop.rs:14:22
   |
LL |     const BAR: i32 = loop { break 4; };
   |                      ^^^^^^^^^^^^^^^^^

error[E0019]: constant contains unimplemented expression type
  --> $DIR/const-loop.rs:31:15
   |
LL |         while false {}
   |               ^^^^^

error[E0019]: constant contains unimplemented expression type
  --> $DIR/const-loop.rs:31:9
   |
LL |         while false {}
   |         ^^^^^^^^^^^^^^

error: aborting due to 19 previous errors

Some errors have detailed explanations: E0019, E0744.
For more information about an error, try `rustc --explain E0019`.
